# TuringMachine

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  TuringMachine.kdev4  main.cpp  maquina.json  mt_definition1.json  mt_definition2.json  multitape_definition.json  run.sh  run_mt_tests.sh  run_tests.sh  run_tests2.sh  run_tests_ones.sh  test_definition.json  test_definition2  test_definition_ones.json  test_mt_definition.json
doc/: Doxyfile
include/: CMakeLists.txt
include/json_spirit/: CMakeLists.txt
src/: CMakeLists.txt  Header.cpp  Header.h  Machine.cpp  Machine.h  State.cpp  State.h  Tape.cpp  Tape.h  TransitionTable.cpp  TransitionTable.h
